:ok_hand: Various minor fixes for new section collapsing

--- a/res/style.css
+++ b/res/style.css
@@ -119,6 +119,11 @@ h1[tabindex="0"].collapsible-heading>.indicator {
     padding-bottom: 0;
 }
 
+summary.section-heading {
+    display: list-item !important;
+    cursor: pointer;
+}
+
 .section-heading>h1,
 .section-heading>h2,
 .section-heading>h3,
